// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileInput component should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-file-input-wrap"
      >
        <div
          class="el-flex-align-center el-flex-container"
        >
          <button
            class="el-mr4 el-intent-low el-button"
            type="button"
          >
            Upload
            <div
              class="el-button-loader"
            />
          </button>
          <input
            class="el-file-input"
            data-testid="el-file-input"
            type="file"
          />
          <input
            class="el-file-input-hidden"
            id="test-static-id"
            value=""
          />
          <p
            class="el-has-grey-text el-has-no-margin el-small-text"
          >
            Upload File
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-file-input-wrap"
    >
      <div
        class="el-flex-align-center el-flex-container"
      >
        <button
          class="el-mr4 el-intent-low el-button"
          type="button"
        >
          Upload
          <div
            class="el-button-loader"
          />
        </button>
        <input
          class="el-file-input"
          data-testid="el-file-input"
          type="file"
        />
        <input
          class="el-file-input-hidden"
          id="test-static-id"
          value=""
        />
        <p
          class="el-has-grey-text el-has-no-margin el-small-text"
        >
          Upload File
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileInput component should match a snapshot with full props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-file-input-wrap"
      >
        <label
          class="el-label"
        >
          Some Label
        </label>
        <div
          class="el-flex-align-center el-flex-container"
        >
          <button
            class="el-mr4 el-intent-low el-button"
            type="button"
          >
            Change
            <div
              class="el-button-loader"
            />
          </button>
          <input
            class="el-file-input"
            data-testid="el-file-input"
            type="file"
          />
          <input
            class="el-file-input-hidden"
            id="test-static-id"
            value="https://mock.com"
          />
          <div
            class="el-file-input-icon-container"
          >
            <span
              class="el-mr4 el-intent-primary el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M10 6.78137C8.22421 6.78137 6.78137 8.22421 6.78137 10C6.78137 11.7758 8.22421 13.2187 10 13.2187C11.7758 13.2187 13.2187 11.7758 13.2187 10C13.2187 8.22421 11.7758 6.78137 10 6.78137ZM9.75584 9.04552C9.35629 9.04552 9.02332 9.37849 9.02332 9.77804H7.95784C7.98004 8.77915 8.77915 7.98004 9.75584 7.98004V9.04552Z"
                    fill="currentColor"
                  />
                  <path
                    d="M19.7669 9.33398C18.6792 7.97993 14.7947 3.56262 10 3.56262C5.20533 3.56262 1.32075 7.97993 0.233074 9.33398C-0.0776914 9.71134 -0.0776914 10.2663 0.233074 10.6658C1.32075 12.0199 5.20533 16.4372 10 16.4372C14.7947 16.4372 18.6792 12.0199 19.7669 10.6658C20.0777 10.2885 20.0777 9.73354 19.7669 9.33398ZM10 14.6614C7.42508 14.6614 5.33851 12.5748 5.33851 9.99991C5.33851 7.425 7.42508 5.33843 10 5.33843C12.5749 5.33843 14.6615 7.425 14.6615 9.99991C14.6615 12.5748 12.5749 14.6614 10 14.6614Z"
                    fill="currentColor"
                  />
                </g>
                <defs>
                  <clippath
                    id="clip0"
                  >
                    <rect
                      fill="white"
                      height="1em"
                      width="1em"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <span
              class="el-mr4 el-intent-primary el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M0 9.99995C0 4.48591 4.48601 0 9.99995 0C15.514 0 19.9999 4.48591 19.9999 9.99995C19.9999 15.514 15.5139 20 9.99995 20C4.48601 20 0 15.514 0 9.99995ZM14.5467 14.5764C13.9855 15.1412 13.0756 15.1412 12.5144 14.5764L9.99068 12.0361L7.4438 14.5528C6.87745 15.1125 5.9676 15.104 5.41159 14.534C4.85558 13.964 4.86396 13.0482 5.4303 12.4886L7.9583 9.99053L5.45326 7.46918C4.89206 6.90432 4.89206 5.9885 5.45326 5.42364C6.01446 4.85879 6.92435 4.85879 7.48555 5.42364L10.0093 7.96384L12.5562 5.44713C13.1225 4.88749 14.0324 4.89593 14.5884 5.46596C15.1444 6.036 15.136 6.95177 14.5697 7.51141L12.0417 10.0095L14.5467 12.5308C15.1079 13.0957 15.1079 14.0115 14.5467 14.5764Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-file-input-wrap"
    >
      <label
        class="el-label"
      >
        Some Label
      </label>
      <div
        class="el-flex-align-center el-flex-container"
      >
        <button
          class="el-mr4 el-intent-low el-button"
          type="button"
        >
          Change
          <div
            class="el-button-loader"
          />
        </button>
        <input
          class="el-file-input"
          data-testid="el-file-input"
          type="file"
        />
        <input
          class="el-file-input-hidden"
          id="test-static-id"
          value="https://mock.com"
        />
        <div
          class="el-file-input-icon-container"
        >
          <span
            class="el-mr4 el-intent-primary el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M10 6.78137C8.22421 6.78137 6.78137 8.22421 6.78137 10C6.78137 11.7758 8.22421 13.2187 10 13.2187C11.7758 13.2187 13.2187 11.7758 13.2187 10C13.2187 8.22421 11.7758 6.78137 10 6.78137ZM9.75584 9.04552C9.35629 9.04552 9.02332 9.37849 9.02332 9.77804H7.95784C7.98004 8.77915 8.77915 7.98004 9.75584 7.98004V9.04552Z"
                  fill="currentColor"
                />
                <path
                  d="M19.7669 9.33398C18.6792 7.97993 14.7947 3.56262 10 3.56262C5.20533 3.56262 1.32075 7.97993 0.233074 9.33398C-0.0776914 9.71134 -0.0776914 10.2663 0.233074 10.6658C1.32075 12.0199 5.20533 16.4372 10 16.4372C14.7947 16.4372 18.6792 12.0199 19.7669 10.6658C20.0777 10.2885 20.0777 9.73354 19.7669 9.33398ZM10 14.6614C7.42508 14.6614 5.33851 12.5748 5.33851 9.99991C5.33851 7.425 7.42508 5.33843 10 5.33843C12.5749 5.33843 14.6615 7.425 14.6615 9.99991C14.6615 12.5748 12.5749 14.6614 10 14.6614Z"
                  fill="currentColor"
                />
              </g>
              <defs>
                <clippath
                  id="clip0"
                >
                  <rect
                    fill="white"
                    height="1em"
                    width="1em"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <span
            class="el-mr4 el-intent-primary el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M0 9.99995C0 4.48591 4.48601 0 9.99995 0C15.514 0 19.9999 4.48591 19.9999 9.99995C19.9999 15.514 15.5139 20 9.99995 20C4.48601 20 0 15.514 0 9.99995ZM14.5467 14.5764C13.9855 15.1412 13.0756 15.1412 12.5144 14.5764L9.99068 12.0361L7.4438 14.5528C6.87745 15.1125 5.9676 15.104 5.41159 14.534C4.85558 13.964 4.86396 13.0482 5.4303 12.4886L7.9583 9.99053L5.45326 7.46918C4.89206 6.90432 4.89206 5.9885 5.45326 5.42364C6.01446 4.85879 6.92435 4.85879 7.48555 5.42364L10.0093 7.96384L12.5562 5.44713C13.1225 4.88749 14.0324 4.89593 14.5884 5.46596C15.1444 6.036 15.136 6.95177 14.5697 7.51141L12.0417 10.0095L14.5467 12.5308C15.1079 13.0957 15.1079 14.0115 14.5467 14.5764Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
